tests/paczka1/fuzzy1/48514221.err
Error in line 20: A254 S55 3,8
Error in line 22: dIbngnqRSDF A33 65,8
Error in line 23: A254 A33 32,8
Error in line 28: A254 S560 46,2
Error in line 35: aZT S55 28,3
Error in line 39: aZT A254 14,0
